wacc_test/sample_programs/valid/structs/assigningStructInAStruct2.wacc
# when a struct contains another struct then to assign it you must create a new struct

# Output:
# 5
# Output:

# Program:

begin
  struct A begin
    struct B anotherStruct ;
  end
  struct B begin
    int someData ;
    int moreData ;
  end
  struct A myStruct ;
  myStruct.anotherStruct = struct B ;
  myStruct.anotherStruct.someData = 5 ;
  println myStruct.anotherStruct.someData
end